--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -38,3 +38,20 @@ ul, li
     padding 0
     margin 0
     list-style-type none
+    
+
+.container
+    display flex
+    
+    &--outer
+        flex-flow row wrap
+        justify-content center
+        align-items center
+        width 100vw
+        overflow-x hidden
+        
+    &--inner
+        flex-flow row wrap
+        justify-content flex-start
+        align-items flex-start
+        min-height 500px
