added image content

--- a/src/styles/font.styl
+++ b/src/styles/font.styl
@@ -3,6 +3,7 @@ h1, h2
     font-weight 700
     font-size 100px
     color $light_red
+    line-height 118px
     
     &.blue
         color $dark_blue
