--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -59,3 +59,9 @@ ul, li
         
         @media screen and (max-width 999px)
             max-width 95%
+            
+div.text-content, div.image-content
+    flex-flow column wrap
+    justify-content flex-start
+    align-items flex-start
+    
