desktop hero done

--- a/src/styles/btns.styl
+++ b/src/styles/btns.styl
@@ -1,32 +1,34 @@
-.btn
-    cursor pointer
-    outline none
-    border none
-    -webkit-appearance none
-    padding 16px 20px
-    
-    display flex
-    flex-flow row wrap
-    justify-content center
-    align-items center
-    
-    background-image linear-gradient(-224deg, #FF4C4C 0%, #FF5F5F 100%)
-    box-shadow 0 2px 10px 0 rgba(51,51,51,0.10), 0 12px 24px 0 rgba(244,128,128,0.50)
-    border-radius 100px
-    
-    &:hover
-        transform translate3d(0, -1px, 0)
+div.container
+    .btn
+        cursor pointer
+        outline none
+        border none
+        -webkit-appearance none
+        padding 15px 27px 19px 25px
+        margin-top 30px
         
-    &:active
-        transform translate3d(0, 1px, 0)
-    
-    &.blue
-        background-image linear-gradient(-45deg, #0D2B65 0%, #2E487A 97%)
-        box-shadow 0 2px 10px 0 rgba(60,74,101,0.10), 0 12px 24px 0 rgba(13,43,101,0.40)
+        display flex
+        flex-flow row wrap
+        justify-content center
+        align-items center
+        
+        background-image linear-gradient(-224deg, #FF4C4C 0%, #FF5F5F 100%)
+        box-shadow 0 2px 10px 0 rgba(51,51,51,0.10), 0 12px 24px 0 rgba(244,128,128,0.50)
         border-radius 100px
         
-    p
-        font-family "Roboto", sans-serif
-        font-weight 700
-        font-size 20px
-        color white
+        &:hover
+            transform translate3d(0, -1px, 0)
+            
+        &:active
+            transform translate3d(0, 1px, 0)
+        
+        &.blue
+            background-image linear-gradient(-45deg, #0D2B65 0%, #2E487A 97%)
+            box-shadow 0 2px 10px 0 rgba(60,74,101,0.10), 0 12px 24px 0 rgba(13,43,101,0.40)
+            border-radius 100px
+            
+        p
+            font-family "Roboto", sans-serif
+            font-weight 700
+            font-size 20px
+            color white
