--- a/src/styles/font.styl
+++ b/src/styles/font.styl
@@ -1,15 +1,17 @@
-h1, h2
-    font-family "Roboto", sans-serif
-    font-weight 700
-    font-size 100px
-    color $light_red
-    line-height 118px
-    
-    &.blue
-        color $dark_blue
+div.container
+    h1, h2
+        font-family "Roboto", sans-serif
+        font-weight 700
+        font-size 100px
+        color $light_red
+        line-height 118px
+        margin-bottom 45px
         
-p
-    font-family "Roboto", sans-serif
-    font-weight 500
-    font-size 14px
-    color $black
+        &.blue
+            color $dark_blue
+            
+    p
+        font-family "Roboto", sans-serif
+        font-weight 500
+        font-size 14px
+        color $black
