--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -55,7 +55,8 @@ ul, li
         justify-content flex-start
         align-items flex-start
         min-height 500px
-        max-width 1200px
+        max-width 1280px
+        padding 50px 0
         
         @media screen and (max-width 999px)
             max-width 95%
@@ -65,3 +66,7 @@ div.text-content, div.image-content
     justify-content flex-start
     align-items flex-start
     
+div.image
+    background-size cover
+    background-position center
+    background-repeat no-repeat
