--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -55,10 +55,11 @@ ul, li
         justify-content flex-start
         align-items flex-start
         min-height 500px
+        width 1280px
         max-width 1280px
         padding 50px 0
         
-        @media screen and (max-width 999px)
+        @media screen and (max-width 1280px)
             max-width 95%
             
 div.text-content, div.image-content
