added footer styles for desktop

--- a/src/styles/font.styl
+++ b/src/styles/font.styl
@@ -15,3 +15,15 @@ div.container
         font-weight 500
         font-size 14px
         color $black
+        
+        &.blue
+            color $dark_blue
+        
+    a
+        font-family "Roboto", sans-serif
+        font-weight 500
+        font-size 14px
+        color $dark_blue
+        
+        &.blue
+            color $dark_blue
