mobile css done

--- a/src/styles/hero.styl
+++ b/src/styles/hero.styl
@@ -12,3 +12,8 @@ div.container--outer.hero
 
                 box-shadow 0 2px 10px 0 rgba(157,139,139,0.09), 0 12px 24px 0 rgba(53,53,53,0.05)
                 border-radius 4px
+                
+                @media screen and (max-width 835px)
+                    width 100vw
+                    height 63.74vw
+                    
