--- a/src/styles/signup.styl
+++ b/src/styles/signup.styl
@@ -1,4 +1,5 @@
 div.container--outer.signup
+    background-image linear-gradient(-224deg, #FFFFFF 30%, #F2F5F9 100%)
     div.container--inner
         flex-flow row-reverse wrap
         justify-content flex-end
