--- a/src/styles/what.styl
+++ b/src/styles/what.styl
@@ -13,3 +13,8 @@ div.container--outer.what
                 background-image url('assets/iphone_7_copy.png')
                 box-shadow 0 2px 10px 0 rgba(139,141,157,0.29), 0 12px 24px 0 rgba(53,53,53,0.05)
                 border-radius 4px
+                
+                @media screen and (max-width 391px)
+                    width 100vw
+                    height 184.48vw
+                    margin-right 0px
