--- a/src/styles/font.styl
+++ b/src/styles/font.styl
@@ -10,6 +10,10 @@ div.container
         &.blue
             color $dark_blue
             
+        @media screen and (max-width 750px)
+            font-size 64px
+            line-height 78px
+            
     p
         font-family "Roboto", sans-serif
         font-weight 500
