--- a/src/styles/hero.styl
+++ b/src/styles/hero.styl
@@ -1,10 +1,22 @@
 div.container--outer.hero
     background-image: linear-gradient(-131deg, #FEF1F1 2%, #FFF 100%);
     div.container--inner
+        position relative
+        @media screen and (max-width 1280px)
+            justify-content space-between
+
         div.text-content
             max-width 445px
+            margin 0
+            
+            @media screen and (max-width 999px)
+                max-width 280px
             
         div.image-content
+            @media screen and (max-width 1280px)
+                position absolute
+                right -130px
+
             div.image--pew
                 background-image url('assets/video.png')
                 width 835px
@@ -13,7 +25,15 @@ div.container--outer.hero
                 box-shadow 0 2px 10px 0 rgba(157,139,139,0.09), 0 12px 24px 0 rgba(53,53,53,0.05)
                 border-radius 4px
                 
-                @media screen and (max-width 835px)
+                @media screen and (max-width 1280px)
+                    width 70vw
+                    height 49.7vw
+                    
+                // @media screen and (max-width 1280px)
+                //     width 50vw
+                //     height 35.6vw
+                    
+                @media screen and (max-width 430px)
                     width 100vw
                     height 63.74vw
                     
