--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -61,7 +61,7 @@ ul, li
         padding 100px 0
         
         @media screen and (max-width 1280px)
-            max-width 100vw
+            max-width 95vw
             padding 50px 0
             
 div.text-content, div.image-content
@@ -75,6 +75,7 @@ div.text-content
     float none
     
 div.image-content
+    position relative
     @media screen and (max-width 750px)
         margin-top 40px
     
@@ -102,5 +103,6 @@ div.logo
         
     @media screen and (max-width 1280px)
         top 27px
-        margin-left 2.5vw
+        margin-left 0px
+        left 0px
         
