edited typo in styles

--- a/src/styles/what.styl
+++ b/src/styles/what.styl
@@ -3,6 +3,7 @@ div.container--outer.what
         flex-flow row-reverse wrap
         justify-content flex-end
         div.text-content
+            margin 0
             max-width 567px
             
         div.image-content
