--- a/src/styles/signup.styl
+++ b/src/styles/signup.styl
@@ -4,6 +4,7 @@ div.container--outer.signup
         flex-flow row-reverse wrap
         justify-content flex-end
         div.text-content
+            margin 0
             max-width 466px
             
         div.image-content
