--- a/src/styles/what.styl
+++ b/src/styles/what.styl
@@ -16,6 +16,7 @@ div.container--outer.what
                 border-radius 4px
                 
                 @media screen and (max-width 391px)
-                    width 100vw
-                    height 184.48vw
+                    width 95vw
+                    height 161.48vw
                     margin-right 0px
+                    background-size contain
