--- a/src/styles/what.styl
+++ b/src/styles/what.styl
@@ -4,7 +4,13 @@ div.container--outer.what
         justify-content flex-end
         div.text-content
             margin 0
-            max-width 567px
+            max-width 490px
+            
+            @media screen and (max-width 999px)
+                max-width 300px
+                
+            @media screen and (max-width 550px)
+                max-width 100%
             
         div.image-content
             div.image--yt
@@ -15,8 +21,20 @@ div.container--outer.what
                 box-shadow 0 2px 10px 0 rgba(139,141,157,0.29), 0 12px 24px 0 rgba(53,53,53,0.05)
                 border-radius 4px
                 
+                @media screen and (max-width 1050px)
+                    margin-right 65px
+                
+                @media screen and (max-width 999px)
+                    width 37vw
+                    height 64.65vw
+                    margin-right 20px
+                    
+                @media screen and (max-width 550px)
+                    width 391px
+                    height 666px
+                    margin-right 0px
+                
                 @media screen and (max-width 391px)
                     width 95vw
                     height 161.48vw
-                    margin-right 0px
                     background-size contain
