playing with rem units

--- a/src/styles/btns.styl
+++ b/src/styles/btns.styl
@@ -30,5 +30,5 @@ div.container
         p
             font-family "Roboto", sans-serif
             font-weight 700
-            font-size 20px
+            font-size 2rem
             color white
