--- a/src/styles/font.styl
+++ b/src/styles/font.styl
@@ -2,7 +2,7 @@ div.container
     h1, h2
         font-family "Roboto", sans-serif
         font-weight 700
-        font-size 100px
+        font-size 10rem
         color $light_red
         line-height 118px
         margin-bottom 45px
@@ -11,13 +11,13 @@ div.container
             color $dark_blue
             
         @media screen and (max-width 999px)
-            font-size 64px
+            font-size 6.4rem
             line-height 78px
             
     p
         font-family "Roboto", sans-serif
         font-weight 500
-        font-size 14px
+        font-size 1.4rem
         color $black
         
         &.blue
@@ -26,7 +26,7 @@ div.container
     a
         font-family "Roboto", sans-serif
         font-weight 500
-        font-size 14px
+        font-size 1.4rem
         color $dark_blue
         
         &.blue
