--- a/src/styles/hero.styl
+++ b/src/styles/hero.styl
@@ -2,9 +2,12 @@ div.container--outer.hero
     background-image: linear-gradient(-131deg, #FEF1F1 2%, #FFF 100%);
     div.container--inner
         position relative
+        padding-bottom 200px
+        
         @media screen and (max-width 1280px)
             justify-content space-between
             align-items center
+            padding-bottom 50px
 
         div.text-content
             max-width 445px
@@ -14,8 +17,10 @@ div.container--outer.hero
                 max-width 280px
             
         div.image-content
+            position absolute
+            right -300px
+            
             @media screen and (max-width 1280px)
-                position absolute
                 right -130px
                 
                 
@@ -27,16 +32,19 @@ div.container--outer.hero
                 margin-top 40px
 
             div.image--pew
-                background-image url('assets/video.png')
-                width 835px
-                height 596px
+                // background-image url('assets/video.png')
+                width 1137px
+                height 711px
 
                 box-shadow 0 2px 10px 0 rgba(157,139,139,0.09), 0 12px 24px 0 rgba(53,53,53,0.05)
                 border-radius 4px
                 
+                video
+                    border-radius 4px
+                
                 @media screen and (max-width 1280px)
                     width 70vw
-                    height 49.7vw
+                    height 43.77vw
                     
                 // @media screen and (max-width 1280px)
                 //     width 50vw
@@ -44,5 +52,5 @@ div.container--outer.hero
                     
                 @media screen and (max-width 430px)
                     width 95vw
-                    height 67.4vw
+                    height 59.4vw
                     
