--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -65,6 +65,9 @@ ul, li
             max-width 95vw
             padding 50px 0
             
+        @media screen and (max-width 600px)
+            max-width 90vw
+            
 div.text-content, div.image-content
     flex-flow column wrap
     justify-content flex-start
@@ -74,6 +77,9 @@ div.text-content
     width 95vw
     margin 0 auto
     float none
+    
+    @media screen and (max-width 600px)
+        max-width 90vw
     
 div.image-content
     position relative
